# Green-Ferret-Server

./: .gitignore
agents/coap/: package-lock.json  package.json
agents/coap/src/: InfluxWriter.ts  main.ts
agents/http/: package-lock.json  package.json
agents/mqtt/: package-lock.json  package.json
agents/mqtt/src/: main.ts
docker/: docker-compose-old.yml
docker-stack/: .env.template  docker-compose.yml
docker-stack/services/forecasting/: pyproject.toml
docker-stack/services/forecasting/arima/: package-lock.json  package.json  tsconfig.json
docker-stack/services/forecasting/arima/src/: main.ts
docker-stack/services/forecasting/greenferret_prophet/: pyproject.toml
docker-stack/services/forecasting/greenferret_prophet/tests/: prophet_test.py
docker-stack/services/forecasting/tests/: arima_test.py  prophet_test.py
docker-stack/services/forecasting/tests/influxdb_utils/: influxdb_query_builder.py  influxdb_utils.py
docker-stack/services/influx_data_generator/: pyproject.toml
docker-stack/services/influx_data_generator/data/: todayRoutes.csv
docker-stack/services/influx_data_generator/src/: data_extractor.py  data_filler.py
docker-stack/services/open-weather-map/: pyproject.toml
docker-stack/services/open-weather-map/tests/: influxDB_meteo_data.py  meteo_data.py
docker/mosquitto/: credentials.txt
docker/telegraf/: telegraf.conf.bkp
docs/: dataScheme.md
open-weather-map/: pyproject.toml
open-weather-map/open_weather_map/: influxDB_meteo_data.py  meteo_data.py
open-weather-map/utils/: gps_coordinates.txt  historical_data.csv
(+92 files in other folders)
